--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm i
-    - run : unset CI
     - run: npm run build --if-present
+      env :
+        CI : ""
     - run: npm test
     
     - uses: awact/s3-action@master
